--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -42,6 +42,7 @@ div {
     /* background-color: #607d8b; */
     /* background-color: #121a29 */
     /* background-color: #76819a; */
+    background-color: #f1f3f4;
 }
 
 a {
@@ -61,6 +62,26 @@ a {
     overflow: hidden;
 }
 
+.home-page{
+    text-decoration: none;
+    font-size: 20px;
+}
+
+.home-page .home-links li {
+    display: inline-block;
+    text-align: center;
+    list-style-type: none;
+    font-size: 36pt;
+    width: 100%;
+    height: 100%;
+    float: none;
+}
+
+.home-page .home-links li a {
+    color: #212628;
+    background-color: transparent;
+}
+
 .home-links li {
     float: left;
 }
@@ -70,6 +91,27 @@ a {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+    /* color: #755c3b; */
+    color: white;
+    background-color: #212628;
+    opacity: .7;
+}
+
+a {
+    color: #006687;
+    text-decoration: underline;
+}
+
+.post-list a {
+    text-decoration: none;
+}
+
+a:visited {
+    /* color: #755C3B; */
+}
+
+p {
+    color: #323739;
 }
 
 .home-links,
