--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -13,7 +13,7 @@ h1 {
 
 p {
     font-size: 105%;
-    line-height: 1.5em;
+    line-height: 150%;
 }
 
 .about div,
@@ -88,6 +88,8 @@ p {
 
 ul {
     padding-top: 1px;
+    font-size: 105%;
+    line-height: 150%;
 }
 
 code {
