--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -143,3 +143,17 @@ code {
     background-color: rgba(27,31,35,0.05);
     border-radius: 3px;
 }
+
+.card {
+    margin: auto;
+    border: 1px solid black;
+    width: 25%;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    padding: 5px;
+    margin-bottom: 3px;
+}
+
+.container {
+    padding: 2px 16px;
+}
